adjusting docker entrypoint